--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="C:/Users/277Student/Desktop/Projects/Pop-Up Penguins/Css/style.css">
+<link rel="stylesheet" type="text/css" href="Pop-Up Penguins/Css/style.css">
 
 </head>
 <body>
