--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="Pop-Up Penguins/Css/style.css">
-
+<link href=”css/style.css” type=”type/css” rel=”stylesheet”>
 </head>
 <body>
   <div id="gameholder">
