--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<link href="css/style.css" type="type/css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="gameholder">
